2011-08-16  Zoltan Horvath  <zoltan@webkit.org>

        [Qt] Ossyize editing/deleting/regional-indicators.html since it fails after r93068
        https://bugs.webkit.org/show_bug.cgi?id=66268

        * platform/qt/Skipped:

2011-08-15  MORITA Hajime  <morrita@google.com>

        REGRESSION(r70598): [Chromium] Style changes in textInput event can prevent from updating <textarea> value.
        https://bugs.webkit.org/show_bug.cgi?id=66216

        Reviewed by Ryosuke Niwa.

        * editing/input/style-change-during-input-expected.txt: Added.
        * editing/input/style-change-during-input.html: Added.

2011-08-15  Gavin Barraclough  <barraclough@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=66263
        DFG JIT does not always zero extend boolean result of DFG operations

        * fast/js/kde/operators-expected.txt:
            - erk! missed new expected results from last commit!

2011-08-15  Hayato Ito  <hayato@chromium.org>

        Fix crash when mouse moves from <summary> element to parent <details> element.
        https://bugs.webkit.org/show_bug.cgi?id=66210

        Reviewed by Dimitri Glazkov.

        This is a regression caused by r92922, which wrongly assumes that
        a shadow host always has a shadow root as an immediate child in
        ancestors chain. This assumption does not apply to <details>
        element. <details> element is implemented as a shadow host, but
        may have a <summary> element as an immediate child element in
        ancestors chain.

        * fast/dom/shadow/details-summary-mouseover-expected.txt: Added.
        * fast/dom/shadow/details-summary-mouseover.html: Added.

2011-08-15  Ryosuke Niwa  <rniwa@webkit.org>

        A mousedown event is not dispatched when clicking on a disabled INPUT
        https://bugs.webkit.org/show_bug.cgi?id=27795

        Reviewed by Alexey Proskuryakov.

        Add a regression test now that the bug no longer reproduces.
