@@ -1,3 +1,12 @@
+2011-08-15  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Web Inspector: resource-tree-errors-reload.html is flaky.
+        https://bugs.webkit.org/show_bug.cgi?id=66217
+
+        Reviewed by Pavel Feldman.
+
+        * http/tests/inspector/resource-tree/resource-tree-errors-reload.html:
+
 2011-08-16  Zoltan Horvath  <zoltan@webkit.org>
 
         [Qt] Ossyize editing/deleting/regional-indicators.html since it fails after r93068
